# adaptive-volume-control

./: CMakeLists.txt  flake.nix
src/: Audio.cpp  Audio.hpp  Main.cpp  RingBuffer.hpp  SmoothLimiter.cpp  SmoothLimiter.hpp  Stereo.hpp
